--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
    
     <div class="buttons">
       <button onclick="learnMore()">🔗 Learn More</button>
-      <button class="call" onclick="callNow()">📞 Call Now</button>
+      <button onclick="callNow()">📞 Call Now</button>
     </div>
   </div>
 
