--- a/index.html
+++ b/index.html
@@ -43,17 +43,12 @@
 🛍️singapore shopping Mall<br>
 🎦Rakki Cinemas
 </p>
-
-
-   
-   
-   
-   
-    <div class="buttons">
-      <button onclick="learnMore()">🔗 Learn More</button>
-      <button onclick="callNow()">📞 Call Now</button>
-    </div>
-  </div>
+<div class="buttons">
+  <button onclick="learnMore()">Learn More</button>
+  <a href="tel:+919876543210">
+    <button>Call Now</button>
+  </a>
+</div>
 
   <script src="script.js"></script>
 </body>
