--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
 🛍️singapore shopping Mall<br>
 🎦Rakki Cinemas
 </p>
-<a href="tel:+919444892265">
-  <button>Call Now</button>
-</a>
+<div class="buttons">
+  <button onclick="learnMore()">Learn More</button>
+  <a href="tel:+919876543210" class="call-button">Call Now</a>
+</div>
 
 
   <script src="script.js"></script>
