--- a/index.html
+++ b/index.html
@@ -3,51 +3,43 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SVF Homes | Dream Home Offer</title>
-  <link rel="stylesheet" href="style.css">
+  <title>SVF Lake View</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <div class="card">
-    <img src="" >
+    <img src="C:\Users\Lenovo\Desktop\web\006f0154-4e38-4912-8d20-c2cd5e2573ae.jpeg" alt="SVF Lake View">
 
     <h3>SVF Lake View</h3>
-    <b>
-    <p>Flat : 900-sqft</p>
-    <p>Carpet Area : 800-sqft</p>
-    <p>Price : Rs 42 Lakhs + Registration</p>
-    <p>SQFT Price : Rs 4,666 per sq.ft</p>
-    <p>Tootal Floor : 3</p>
-    <p>One Floor: 2 Flats</p>
-    <p>Toatal Flats: 6</p>
-    <p>Property Ownership : Freehold</p> 
-    <p><strong>Pay Just 10% Now & Enjoy 0 EMI Till Possession!</strong></p>
-    <p>Amenities :  Lift, 3 Phase EB, Covered Car parking, Metro & Drainage water</p>
-    <p>Flooring : Vitrified</p>
-<p>Under construction</p>
-<p>Road Width : 30 Feet</p>
-<p>Overlooking : Main Road</p>
-<p>Property Age : 0 to 1 Year Old</p>
-<p>voice over : Female professional voice</p>
-<p>Facing : East</p></b>
+    <p><strong>Flat:</strong> 900 sqft &nbsp;|&nbsp; <strong>Carpet:</strong> 800 sqft &nbsp;|&nbsp; <strong>Price:</strong> ₹42 Lakhs + Reg</p>
+    <p><strong>Price/Sqft:</strong> ₹4,666</p>
 
-<p><i>Configuration : 2 Bedrooms , 2 Bathrooms, 2 Balconies with Pooja Room</i></p>
-
-<p><strong>📍Address :  Lake View Garden, Tirumullaivoil, NO 5, lake view garden, Manikandapuram extn, Bharathi Nagar Extn, Bharathi Nagar Extension, Thirumullaivoyal, Chennai, Tamil Nadu 600062
-</strong></p>
-
-<p>Near:
-<br>
+    <div id="more-details" class="hidden">
+      <p><strong>Total Floors:</strong> 3 &nbsp;|&nbsp; <strong>Flats/Floor:</strong> 2 &nbsp;|&nbsp; <strong>Total Flats:</strong> 6</p>
+      <p><strong>Ownership:</strong> Freehold</p>
+      <p><strong>Offer:</strong> Pay Just 10% Now & Enjoy 0 EMI Till Possession!</p>
+      <p><strong>Amenities:</strong> Lift, Covered Parking, Metro, Drainage Water</p>
+      <p><strong>Flooring:</strong> Vitrified</p>
+      <p><strong>Status:</strong> Under construction</p>
+      <p><strong>Road Width:</strong> 30 ft &nbsp;|&nbsp; <strong>Facing:</strong> East</p>
+      <p><strong>Configuration:</strong> 2 BHK (2 Bed, 2 Bath, 2 Balconies + Pooja Room)</p>
+      <p><strong>Address:</strong> Lake View Garden, Thirumullaivoyal, Chennai, TN 600062</p>
+      <p><strong>Nearby:</strong>
+       <br>
 🏫G K Shetty Vivekananda Vidyalaya Senior Secondary School<br>
 🏥be well hospital ambattur<br>
 🛍️singapore shopping Mall<br>
 🎦Rakki Cinemas
-</p>
-<div class="buttons">
-  <button onclick="learnMore()">Learn More</button>
-  <a href="tel:+919876543210" class="call-button">Call Now</a>
-</div>
+      </p>
+    </div>
 
+    <div class="buttons">
+      <button id="read-btn">📖 Read More</button>
+      <button id="learn-btn">🔗 Learn More</button>
+      <button id="call-btn" class="call">📞 Call Now</button>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
